# tita_rl_locomotion

devices/diablo_joint_sdk/: CMakeLists.txt  package.xml
devices/diablo_joint_sdk/include/: serial_handle.hpp
devices/diablo_joint_sdk/src/: serial_handle.cpp
devices/diablo_joint_sdk/src/SerialPort/: SerialPort.cpp
devices/hardware_bridge/: package.xml
devices/hardware_bridge/launch/: hardware_bridge.launch.py  joint_calibration_launch.py
devices/hardware_bridge/src/: hardware_bridge_node.cpp
interaction/keyboard_controller/src/: keyboard_controller.cpp
locomotion_bringup/config/: diablo_pluspro_controllers.yaml
locomotion_bringup/launch/: hw_bringup.launch.py  sim_bringup.launch.py  sim_diablopluspro.launch.py
tita_controllers/robot_inertia_calculator/config/: param.yaml
tita_controllers/robot_inertia_calculator/src/: robot_inertia_calculator.cpp
tita_controllers/tita_controller/: CMakeLists.txt
tita_controllers/tita_controller/src/: tita_controller_node.cpp  tita_controller_parameters.yaml
tita_description/: CMakeLists.txt  README.md
tita_description/diablo_plus_pro/meshes/: base_link.STL  left_hip_link.STL  left_knee_link.STL  left_wheel_link.STL  right_hip_link.STL  right_knee_link.STL  right_wheel_link.STL
tita_description/diablo_plus_pro/urdf/: diablo_plus_pro.csv  diablo_plus_pro.urdf
tita_description/diablo_plus_pro/xacro/: description.xacro  display.xacro  robot.xacro
tita_description/diablo_pluspro_stand/xacro/: robot.xacro  (+4 more)
tita_description/launch/: diablo_pluspro_display.launch.py
tita_description/rviz/: diablo_pluspro.rviz
(+24 files in other folders)
